--- a/_bibliography/national_conferences.bib
+++ b/_bibliography/national_conferences.bib
@@ -120,7 +120,7 @@
 @inproceedings{Quiroz-Omana2016,
 	title = {Parsimonious {Kinematic} {Control} of {Nonholonomic} {Mobile} {Manipulators}},
 	isbn = {978-1-5090-3656-1},
-	url = {http://ieeexplore.ieee.org/document/7783505/},
+	html = {http://ieeexplore.ieee.org/document/7783505/},
 	doi = {10.1109/LARS-SBR.2016.19},
 	abstract = {This paper presents the implementation and per- formance comparison of two whole-body kinematic control strategies for a robot composed of one manipulator with five degrees of freedom (DOF) serially coupled to a nonholonomic mobile base. The control strategy is based on a cascade scheme composed of an outer loop that takes into account all DOF and an inner loop that explicitly deals with the nonholonomic constraints of the mobile base. The comparison is performed between two techniques applied at the outer loop to deal with the whole-body motion, namely a traditional approach that uses the pseudoinverse of the robot Jacobian matrix and the parsimonious control recently introduced by Gonçalves et al. [1]. Experiments on a real robot show that the parsimonious approach uses fewer actuators than the traditional approach at the expense of more abrupt control signals.},
 	booktitle = {2016 {XIII} {Latin} {American} {Robotics} {Symposium} and {IV} {Brazilian} {Robotics} {Symposium} ({LARS}/{SBR})},
@@ -135,7 +135,7 @@
 @inproceedings{Fonseca2016,
 	title = {Whole-{Body} {Modeling} and {Hierarchical} {Control} of a {Humanoid} {Robot} {Based} on {Dual} {Quaternion} {Algebra}},
 	isbn = {978-1-5090-3656-1},
-	url = {http://ieeexplore.ieee.org/document/7783510/},
+	html = {http://ieeexplore.ieee.org/document/7783510/},
 	doi = {10.1109/LARS-SBR.2016.24},
 	booktitle = {2016 {XIII} {Latin} {American} {Robotics} {Symposium} and {IV} {Brazilian} {Robotics} {Symposium} ({LARS}/{SBR})},
 	publisher = {IEEE},
@@ -149,7 +149,7 @@
 @inproceedings{Rego2016,
 	title = {Formation {Backstepping} {Control} {Based} on the {Cooperative} {Dual} {Task}-{Space} {Framework}: {A} {Case} {Study} on {Unmanned} {Aerial} {Vehicles}},
 	isbn = {978-1-5090-3656-1},
-	url = {http://ieeexplore.ieee.org/document/7783520/},
+	html = {http://ieeexplore.ieee.org/document/7783520/},
 	doi = {10.1109/LARS-SBR.2016.34},
 	booktitle = {2016 {XIII} {Latin} {American} {Robotics} {Symposium} and {IV} {Brazilian} {Robotics} {Symposium} ({LARS}/{SBR})},
 	publisher = {IEEE},
@@ -164,7 +164,7 @@
 @inproceedings{Silva2016,
 	title = {Whole-body control of a mobile manipulator using feedback linearization based on dual quaternions},
 	isbn = {978-1-5090-3656-1},
-	url = {http://ieeexplore.ieee.org/document/7783542/},
+	html = {http://ieeexplore.ieee.org/document/7783542/},
 	doi = {10.1109/LARS-SBR.2016.56},
 	booktitle = {2016 {XIII} {Latin} {American} {Robotics} {Symposium} and {IV} {Brazilian} {Robotics} {Symposium} ({LARS}/{SBR})},
 	publisher = {IEEE},
@@ -179,7 +179,7 @@
 	address = {Curitiba},
 	title = {External hybrid force/pose controller for manipulator robots using dual quaternion algebra},
 	isbn = {978-1-5386-0956-9},
-	url = {http://ieeexplore.ieee.org/document/8215334/},
+	html = {http://ieeexplore.ieee.org/document/8215334/},
 	doi = {10.1109/SBR-LARS-R.2017.8215334},
 	booktitle = {2017 {Latin} {American} {Robotics} {Symposium} ({LARS}) and 2017 {Brazilian} {Symposium} on {Robotics} ({SBR})},
 	publisher = {IEEE},
@@ -191,7 +191,7 @@
 
 @inproceedings{Fonseca2018,
 	title = {Design of an {Adaptive} {Controller} to {Improve} the {Condition} {Number} of the {Inertia} {Matrix} of {Serial} {Manipulators}},
-	url = {http://www.swge.inf.br/proceedings/paper/?P=CBA2018-0982},
+	html = {http://www.swge.inf.br/proceedings/paper/?P=CBA2018-0982},
 	doi = {10.20906/CPS/CBA2018-0982},
 	booktitle = {Anais do {XXII} {Congresso} {Brasileiro} de {Automática}},
 	author = {{Mariana de Paula Assis Fonseca} and {Bruno Vilhena Adorno} and {Philippe Fraisse}},
@@ -201,7 +201,7 @@
 
 @inproceedings{Brito2018,
 	title = {{CONVERGÊNCIA} {E} {COBERTURA} {DE} {CURVAS} {POR} {SISTEMAS} {MULTI}-{ROBÔS}},
-	url = {http://www.swge.inf.br/proceedings/paper/?P=CBA2018-0994},
+	html = {http://www.swge.inf.br/proceedings/paper/?P=CBA2018-0994},
 	doi = {10.20906/CPS/CBA2018-0994},
 	booktitle = {Anais do {XXII} {Congresso} {Brasileiro} de {Automática}},
 	author = {{Rafael Palma de Brito} and {Bruno Vilhena Adorno} and {Luciano Cunha de Araújo Pimenta}},
@@ -212,7 +212,7 @@
 
 @inproceedings{DinizUrban2020,
 	title = {Biped {Walking} {Control} {Based} on {Quadratic} {Programming} and {Differential} {Inequalities}},
-	url = {https://www.sba.org.br/open_journal_systems/index.php/sba/article/view/1029},
+	html = {https://www.sba.org.br/open_journal_systems/index.php/sba/article/view/1029},
 	doi = {10.48011/asba.v2i1.1029},
 	booktitle = {Anais do {Congresso} {Brasileiro} de {Automática} 2020},
 	publisher = {sbabra},
@@ -225,7 +225,7 @@
 @inproceedings{AlmadaCampos2020,
 	title = {Development of {Human}-{Robot} {Communication} {Technologies} for {Future} {Interaction} {Experiments}},
 	isbn = {978-0-7381-1153-7},
-	url = {https://ieeexplore.ieee.org/document/9306965/},
+	html = {https://ieeexplore.ieee.org/document/9306965/},
 	doi = {10.1109/LARS/SBR/WRE51543.2020.9306965},
 	booktitle = {2020 {Latin} {American} {Robotics} {Symposium} ({LARS}), 2020 {Brazilian} {Symposium} on {Robotics} ({SBR}) and 2020 {Workshop} on {Robotics} in {Education} ({WRE})},
 	publisher = {IEEE},
@@ -237,7 +237,7 @@
 
 @inproceedings{S.Pereira2020,
 	title = {Manipulation {Task} {Planning} with {Constrained} {Kinematic} {Controller}},
-	url = {https://www.sba.org.br/open_journal_systems/index.php/sba/article/view/1276},
+	html = {https://www.sba.org.br/open_journal_systems/index.php/sba/article/view/1276},
 	doi = {10.48011/asba.v2i1.1276},
 	booktitle = {Anais do {Congresso} {Brasileiro} de {Automática} 2020},
 	publisher = {sbabra},
