--- a/_bibliography/theses.bib
+++ b/_bibliography/theses.bib
@@ -2,7 +2,7 @@
 @mastersthesis{masterthesis:Adorno:2008,
 	address = {Brasília, Brazil},
 	title = {Planejamento probabilístico de rotas no espaço de configuração e sua aplicação em robótica móvel},
-	url = {http://www.realp.unb.br/jspui/handle/10482/3962?locale=en},
+	html = {http://www.realp.unb.br/jspui/handle/10482/3962?locale=en},
 	language = {Portuguese},
 	school = {Universidade de Brasília},
 	author = {Adorno, Bruno Vilhena},
@@ -15,7 +15,7 @@
 	address = {Montpellier, France},
 	type = {{PhD} {Dissertation}},
 	title = {Two-arm {Manipulation}: {From} {Manipulators} to {Enhanced} {Human}-{Robot} {Collaboration} [{Contribution} à la manipulation à deux bras : des manipulateurs à la collaboration homme-robot]},
-	url = {https://tel.archives-ouvertes.fr/tel-00641678/},
+	html = {https://tel.archives-ouvertes.fr/tel-00641678/},
 	language = {English},
 	school = {Université Montpellier 2},
 	author = {Adorno, Bruno Vilhena},
