--- a/_bibliography/abstracts.bib
+++ b/_bibliography/abstracts.bib
@@ -2,7 +2,7 @@
 @inproceedings{Bernardes2011,
 	address = {Berlin},
 	title = {Path planning for steerable needles using duty-cycling},
-	html = {https://link.springer.com/article/10.1007/s11548-011-0614-0}
+	html = {https://link.springer.com/article/10.1007/s11548-011-0614-0},
 	doi = {10.1007/s11548-011-0614-0},
 	booktitle = {{CARS} 2011 {Computer} {Assisted} {Radiology} and {Surgery}},
 	publisher = {Springer},
