--- a/_bibliography/journals.bib
+++ b/_bibliography/journals.bib
@@ -325,6 +325,7 @@
 	month = dec,
 	year = {2022},
 	pages = {3498--3513},
+	code = {https://github.com/mmmarinho/tro2022_adaptivecontrol},
 }
 
 @article{tang_design_2023,
