--- a/_bibliography/abstracts.bib
+++ b/_bibliography/abstracts.bib
@@ -9,6 +9,7 @@
 	author = {Bernardes, Mariana Costa and Adorno, Bruno Vilhena and Zemiti, Nabil and Poignet, Philippe and Borges, Geovany Araújo},
 	year = {2011},
 	pages = {S293--S294},
+	bibtex_show={true},
 }
 
 
@@ -20,7 +21,7 @@
 	author = {Urban, Stella Diniz and Adorno, Bruno Vilhena},
 	year = {2019},
 	pages = {1--2},
-
+	bibtex_show={true},
 }
 
 @inproceedings{Silva2019,
@@ -31,6 +32,7 @@
 	author = {Silva, Frederico Fernandes Afonso and Adorno, Bruno Vilhena},
 	year = {2019},
 	pages = {1--2},
+	bibtex_show={true},
 }
 
 @inproceedings{Pereira2019,
@@ -41,6 +43,7 @@
 	author = {Pereira, Marcos da Silva and Adorno, Bruno Vilhena},
 	year = {2019},
 	pages = {1--2},
+	bibtex_show={true},
 }
 
 @inproceedings{Quiroz-Omana2019a,
@@ -51,6 +54,7 @@
 	author = {Quiroz-Omaña, Juan José and Adorno, Bruno Vilhena},
 	year = {2019},
 	pages = {1--2},
+	bibtex_show={true},
 }
 
 @inproceedings{Brito2019,
@@ -61,6 +65,7 @@
 	author = {Brito, Rafael Palma and Adorno, Bruno Vilhena and Pimenta, Luciano Cunha de Araújo},
 	year = {2019},
 	pages = {1--2},
+	bibtex_show={true},
 }
 
 @inproceedings{Fonseca2019,
@@ -71,6 +76,7 @@
 	author = {Fonseca, Mariana de Paula Assis and Adorno, Bruno Vilhena and Fraisse, Philippe},
 	year = {2019},
 	pages = {1--2},
+	bibtex_show={true},
 }
 
 @inproceedings{Campos2019,
@@ -81,6 +87,7 @@
 	author = {Campos, Almada Christina Almada and Adorno, Bruno Vilhena},
 	year = {2019},
 	pages = {1--2},
+	bibtex_show={true},
 }
 
 @inproceedings{johnson_receding_2023,
@@ -93,6 +100,7 @@
 	year = {2023},
 	pages = {34--37},
 	html = {https://research.manchester.ac.uk/en/publications/receding-horizon-contact-planning-for-advanced-motions-in-hexapod},
+	bibtex_show={true},
 }
 
 @inproceedings{johnson_receding_2023,
@@ -105,6 +113,7 @@
 	year = {2023},
 	pages = {1--3},
 	html = {https://research.manchester.ac.uk/en/publications/receding-horizon-contact-planning-for-agile-motions-in-hexapod-ro},
+	bibtex_show={true},
 }
 
 @inproceedings{leslie-dalley_control_2024,
@@ -117,6 +126,7 @@
 	year = {2024},
 	pages = {1--2},
 	html = {https://research.manchester.ac.uk/en/publications/control-strategies-for-the-task-definition-of-constrained-bimanua},
+	bibtex_show={true},
 }
 
 @inproceedings{tang_automated_2024,
@@ -128,6 +138,7 @@
 	author = {Tang, Yuan and McGrath, Brendan and Weightman, Andrew and Adorno, Bruno Vilhena},
 	year = {2024},
 	pages = {1--2},
+	bibtex_show={true},
 }
 
 @inproceedings{tang_clinical_2023,
@@ -138,5 +149,6 @@
 	author = {Tang, Yuan and Li, Lutong and Yuan, Pu and Lu, Zhanghao and Adorno, Bruno V. and Mcgrath, Brendan and Weightman, Andrew},
 	month = apr,
 	year = {2023},
+	bibtex_show={true},
 	html = {https://research.manchester.ac.uk/en/publications/clinical-perspective-of-developing-robotic-systems-for-assisting-},
 }
