--- a/_bibliography/book_chapters.bib
+++ b/_bibliography/book_chapters.bib
@@ -8,4 +8,5 @@
 	editor = {Romero, Roseli Aparecida Francelin and Prestes, Edson and Osório, Fernando and Wolf, Denis},
 	year = {2014},
 	pages = {84--110},
+	bibtex_show={true},
 }
