--- a/_bibliography/international_conferences.bib
+++ b/_bibliography/international_conferences.bib
@@ -8,6 +8,7 @@
 	year = {2009},
 	pages = {988--993},
 	html = {https://doi.org/10.1109/IROS.2009.5354533},
+	bibtex_show={true},
 }
 
 @inproceedings{Adorno2011a,
@@ -24,6 +25,7 @@
 	year = {2011},
 	note = {ISSN: 10504729},
 	pages = {3777--3783},
+	bibtex_show={true},
 }
 
 @inproceedings{Bernardes2011b,
@@ -37,6 +39,7 @@
 	author = {Bernardes, Mariana C and Adorno, Bruno V and Poignet, Philippe and Zemiti, Nabil and Borges, Geovany A},
 	year = {2011},
 	pages = {2545--2550},
+	bibtex_show={true},
 }
 
 @inproceedings{Adorno2011d,
@@ -50,6 +53,7 @@
 	author = {Adorno, Bruno Vilhena and Bo, Antonio Padilha Lanari and Fraisse, Philippe},
 	year = {2011},
 	pages = {4658--4663},
+	bibtex_show={true},
 }
 
 @inproceedings{Bernardes2012,
@@ -66,6 +70,7 @@
 	year = {2012},
 	note = {ISSN: 10504729},
 	pages = {1595--1600},
+	bibtex_show={true},
 }
 
 
@@ -84,6 +89,7 @@
 	note = {ISSN: 23267771},
 	keywords = {human-robot interaction, assistive technologies, ERD/ERS brain-machine interface, neurorobotics},
 	pages = {1--7},
+	bibtex_show={true},
 }
 
 
@@ -99,6 +105,7 @@
 	month = sep,
 	year = {2014},
 	pages = {1703--1709},
+	bibtex_show={true},
 }
 
 @inproceedings{Lana2015,
@@ -114,6 +121,7 @@
 	year = {2015},
 	keywords = {Service Robots, Manipulation Planning, Planning, Scheduling and Coordination},
 	pages = {3083--3088},
+	bibtex_show={true},
 }
 
 @inproceedings{Marinho2015,
@@ -128,6 +136,7 @@
 	month = sep,
 	year = {2015},
 	pages = {4047--4052},
+	bibtex_show={true},
 }
 
 @inproceedings{Figueredo2013,
@@ -144,6 +153,7 @@
 	year = {2013},
 	note = {ISSN: 10504729},
 	pages = {1949--1955},
+	bibtex_show={true},
 }
 
 @inproceedings{Adorno2010,
@@ -158,6 +168,7 @@
 	month = oct,
 	year = {2010},
 	pages = {3955--3960},
+	bibtex_show={true},
 }
 
 @inproceedings{Pham2010,
@@ -172,6 +183,7 @@
 	month = oct,
 	year = {2010},
 	pages = {658--663},
+	bibtex_show={true},
 }
 
 @inproceedings{Mello2016,
@@ -186,6 +198,7 @@
 	month = jun,
 	year = {2016},
 	pages = {702--707},
+	bibtex_show={true},
 }
 
 
@@ -201,6 +214,7 @@
 	year = {2018},
 	note = {arXiv: 1804.11270},
 	pages = {5364--5371},
+	bibtex_show={true},
 }
 
 
@@ -218,6 +232,7 @@
 	year = {2019},
 	note = {arXiv: 1809.07907},
 	pages = {2721--2727},
+	bibtex_show={true},
 }
 
 
@@ -233,6 +248,7 @@
 	month = dec,
 	year = {2019},
 	pages = {111--116},
+	bibtex_show={true},
 }
 
 @inproceedings{Cheah2022,
@@ -247,7 +263,7 @@
 	month = oct,
 	year = {2022},
 	pages = {2616--2621},
-	annote = {There is a typo in the value of alpha. The correct is the one in the figure; that is, alpha is +1 when the CoM is above the horizontal axis and -1 otherwise. Remember to put an errata on my Webpage.},
+	bibtex_show={true},
 }
 
 @inproceedings{pereira_task_2023,
@@ -264,6 +280,7 @@
 	month = oct,
 	year = {2023},
 	pages = {2034--2041},
+	bibtex_show={true},
 }
 
 @inproceedings{dursun_maintaining_2023,
@@ -279,4 +296,5 @@
 	month = oct,
 	year = {2023},
 	pages = {6371--6378},
+	bibtex_show={true},
 }
