--- a/_bibliography/journals.bib
+++ b/_bibliography/journals.bib
@@ -12,6 +12,7 @@
 	month = apr,
 	year = {2014},
 	pages = {216--227},
+	bibtex_show={true},
 }
 
 @article{Bernardes2013,
@@ -29,6 +30,7 @@
 	note = {Publisher: Elsevier Ltd},
 	keywords = {Robotics, Needle, Steering},
 	pages = {630--645},
+	bibtex_show={true},
 }
 
 @article{Adorno2015,
@@ -45,6 +47,7 @@
 	month = feb,
 	year = {2015},
 	pages = {314--331},
+	bibtex_show={true},
 }
 
 @article{Goncalves2016,
@@ -60,6 +63,7 @@
 	month = jan,
 	year = {2016},
 	pages = {65--72},
+	bibtex_show={true},
 }
 
 @article{Lana2015a,
@@ -75,6 +79,7 @@
 	year = {2015},
 	keywords = {brain-machine interface, desynchronization, event-related, movement intention, objective response detection, statistical f test},
 	pages = {285--294},
+	bibtex_show={true},
 }
 
 @article{Adorno2016,
@@ -90,6 +95,7 @@
 	year = {2017},
 	keywords = {kinematics, unit dual quaternion, cross-motion invariance, rigid motion},
 	pages = {1359--1378},
+	bibtex_show={true},
 }
 
 @article{Kussaba2017,
@@ -104,6 +110,7 @@
 	month = may,
 	year = {2017},
 	pages = {2769--2787},
+	bibtex_show={true},
 }
 
 @article{Silva2017,
@@ -118,6 +125,7 @@
 	month = aug,
 	year = {2018},
 	pages = {249--262},
+	bibtex_show={true},
 }
 
 @article{Pham2017,
@@ -132,6 +140,7 @@
 	year = {2018},
 	keywords = {Dual quaternion, Pose control, Robot manipulator},
 	pages = {100--110},
+	bibtex_show={true},
 }
 
 @article{Goncalves2020,
@@ -146,6 +155,7 @@
 	month = jun,
 	year = {2020},
 	pages = {644--656},
+	bibtex_show={true},
 }
 
 @article{Quiroz-Omana2017,
@@ -160,6 +170,7 @@
 	month = aug,
 	year = {2018},
 	pages = {263--278},
+	bibtex_show={true},
 }
 
 @article{Marinho2019,
@@ -178,6 +189,7 @@
 	note = {arXiv: 1804.11270
 	Publisher: IEEE},
 	pages = {1166--1185},
+	bibtex_show={true},
 }
 
 @article{Quiroz-Omana2019,
@@ -195,6 +207,7 @@
 	note = {arXiv: 1906.07322
 	Publisher: Federal University of Minas Gerais},
 	pages = {4048--4053},
+	bibtex_show={true},
 }
 
 @article{Savino2020,
@@ -212,6 +225,7 @@
 	note = {arXiv: 1810.08871
 	Publisher: Elsevier Ltd},
 	pages = {142--178},
+	bibtex_show={true},
 }
 
 @article{Fonseca2021b,
@@ -230,6 +244,7 @@
 	ISBN: 1084602001275},
 	keywords = {adaptive control, robot manipulator, Dual quaternion, Adaptive control, Robot manipulator, Ill-conditioning, ill-conditioning, Admittance control, admittance control, dynamic control, Dynamic control},
 	pages = {41},
+	bibtex_show={true},
 }
 
 @article{Figueredo2018,
@@ -246,6 +261,7 @@
 	note = {arXiv: 1811.05436
 	Publisher: Elsevier Ltd},
 	pages = {109817},
+	bibtex_show={true},
 }
 
 @article{Adorno2019,
@@ -264,6 +280,7 @@
 	Publisher: IEEE},
 	keywords = {Quaternions, Manipulators, Robot kinematics, Algebra, Libraries, Matlab},
 	pages = {102--116},
+	bibtex_show={true},
 }
 
 @article{Fonseca2020a,
@@ -278,6 +295,7 @@
 	month = oct,
 	year = {2020},
 	pages = {6057--6064},
+	bibtex_show={true},
 }
 
 @article{Silva2020,
@@ -294,6 +312,7 @@
 	year = {2022},
 	keywords = {dual quaternion algebra, constraint, euler-lagrange equations, gauss, gibbs-appell equations, kane, mobile manipulator dynamics, newton-euler model, s equations, s principle of least},
 	pages = {061005},
+	bibtex_show={true},
 }
 
 @article{Pereira2022,
@@ -311,6 +330,7 @@
 	note = {Publisher: Springer US},
 	keywords = {task planning, Task planning, constrained control, Constrained control, task relaxation, Task relaxation},
 	pages = {1103--1115},
+	bibtex_show={true},
 }
 
 @article{Marinho2022,
@@ -326,6 +346,7 @@
 	year = {2022},
 	pages = {3498--3513},
 	code = {https://github.com/mmmarinho/tro2022_adaptivecontrol},
+	bibtex_show={true},
 }
 
 @article{tang_design_2023,
@@ -341,6 +362,7 @@
 	author = {Tang, Yuan and Li, Lutong and Lu, Zhanghao and Haron, Athia and Adorno, Bruno V. and McGrath, Brendan and Weightman, Andrew},
 	month = nov,
 	year = {2023},
+	bibtex_show={true},
 	pages = {754--767},
 	
 }
