--- a/_bibliography/national_conferences.bib
+++ b/_bibliography/national_conferences.bib
@@ -4,6 +4,7 @@
 	author = {Adorno, Bruno Vilhena and Aguiar, Carla Silva Rocha and Borges, Geovany Araújo},
 	year = {2005},
 	pages = {1--8},
+	bibtex_show={true},
 }
 
 @inproceedings{article:AdornoBorges:2007,
@@ -13,6 +14,7 @@
 	author = {Adorno, Bruno Vilhena and Borges, Geovany Araújo},
 	year = {2007},
 	pages = {1--6},
+	bibtex_show={true},
 }
 
 @inproceedings{article:Adorno:2006,
@@ -21,6 +23,7 @@
 	author = {Adorno, Bruno Vilhena and Borges, Geovany Araújo},
 	year = {2006},
 	pages = {1--6},
+	bibtex_show={true},
 }
 
 
@@ -33,6 +36,7 @@
 	year = {2012},
 	keywords = {cooperative systems, dual quaternion, resumo, cooperative dual task-space, este artigo prop, kinematic control, ma-, multiarm manipulation, nipulator robots},
 	pages = {1436--1443},
+	bibtex_show={true},
 }
 
 @inproceedings{Lana2013c,
@@ -43,6 +47,7 @@
 	year = {2013},
 	keywords = {human-robot interaction, assistance task, dual quaternion algebra, jacobian-based control, task-priority control},
 	pages = {1--6},
+	bibtex_show={true},
 }
 
 
@@ -54,6 +59,7 @@
 	year = {2013},
 	keywords = {robotic manipulator, dual quaternions, kinematic control, openrave, ros},
 	pages = {1--6},
+	bibtex_show={true},
 }
 
 @inproceedings{Salazar-Sangucho2014,
@@ -64,6 +70,7 @@
 	author = {Salazar-Sangucho, Fredy Rolando and Adorno, Bruno Vilhena},
 	year = {2014},
 	pages = {1544--1551},
+	bibtex_show={true},
 }
 
 
@@ -75,6 +82,7 @@
 	year = {2014},
 	keywords = {dual quaternions, manipulation tasks, tff, twists, wrenches},
 	pages = {965--972},
+	bibtex_show={true},
 }
 
 @inproceedings{Duraes2014,
@@ -85,6 +93,7 @@
 	year = {2014},
 	keywords = {discrete event systems, optimal directed control, sequencing, supervisory control theory},
 	pages = {1608--1615},
+	bibtex_show={true},
 }
 
 @inproceedings{Oliveira2015a,
@@ -96,6 +105,7 @@
 	year = {2015},
 	keywords = {humanoid robots, dual quaternion, center of mass, com, com control, cooperative dual},
 	pages = {485 -- 490},
+	bibtex_show={true},
 }
 
 @inproceedings{Brito2015b,
@@ -105,6 +115,7 @@
 	author = {Brito, Rafael P and Savino, Heitor J and Adorno, Bruno V and Pimenta, Luciano C A},
 	year = {2015},
 	pages = {1907 -- 1912},
+	bibtex_show={true},
 }
 
 
@@ -115,6 +126,7 @@
 	author = {Mello, Laysa Santos and Adorno, Bruno Vilhena and Raffo, Guilherme Vianna},
 	year = {2015},
 	pages = {969--974},
+	bibtex_show={true},
 }
 
 @inproceedings{Quiroz-Omana2016,
@@ -130,6 +142,7 @@
 	year = {2016},
 	keywords = {Adorno, Quiroz-Omaña},
 	pages = {73--78},
+	bibtex_show={true},
 }
 
 @inproceedings{Fonseca2016,
@@ -144,6 +157,7 @@
 	year = {2016},
 	keywords = {Whole-body control, Humanoid robot, Kinematic control},
 	pages = {103--108},
+	bibtex_show={true},
 }
 
 @inproceedings{Rego2016,
@@ -157,6 +171,7 @@
 	month = oct,
 	year = {2016},
 	pages = {163--168},
+	bibtex_show={true},
 }
 
 
@@ -172,6 +187,7 @@
 	month = oct,
 	year = {2016},
 	pages = {293--298},
+	bibtex_show={true},
 }
 
 
@@ -187,6 +203,7 @@
 	month = nov,
 	year = {2017},
 	pages = {1--6},
+	bibtex_show={true},
 }
 
 @inproceedings{Fonseca2018,
@@ -197,6 +214,7 @@
 	author = {{Mariana de Paula Assis Fonseca} and {Bruno Vilhena Adorno} and {Philippe Fraisse}},
 	year = {2018},
 	pages = {1--8},
+	bibtex_show={true},
 }
 
 @inproceedings{Brito2018,
@@ -207,6 +225,7 @@
 	author = {{Rafael Palma de Brito} and {Bruno Vilhena Adorno} and {Luciano Cunha de Araújo Pimenta}},
 	year = {2018},
 	pages = {1--8},
+	bibtex_show={true},
 }
 
 
@@ -220,6 +239,7 @@
 	month = dec,
 	year = {2020},
 	pages = {1--8},
+	bibtex_show={true},
 }
 
 @inproceedings{AlmadaCampos2020,
@@ -233,6 +253,7 @@
 	month = nov,
 	year = {2020},
 	pages = {1--6},
+	bibtex_show={true},
 }
 
 @inproceedings{S.Pereira2020,
@@ -245,4 +266,5 @@
 	month = dec,
 	year = {2020},
 	pages = {1--8},
+	bibtex_show={true},
 }
