--- a/_bibliography/preprints.bib
+++ b/_bibliography/preprints.bib
@@ -7,6 +7,7 @@
 	author = {Adorno, Bruno Vilhena},
 	year = {2017},
 	pages = {48},
+	bibtex_show={true},
 }
 
 @misc{Adorno2022,
@@ -15,6 +16,7 @@
 	author = {Adorno, Bruno Vilhena and Marinho, Murilo Marques},
 	year = {2022},
 	pages = {31},
+	bibtex_show={true},
 }
 
 @misc{Silva2022a,
@@ -26,4 +28,5 @@
 	month = dec,
 	year = {2023},
 	arxiv = {2208.01795},
+	bibtex_show={true},
 }
