--- a/_bibliography/theses.bib
+++ b/_bibliography/theses.bib
@@ -3,10 +3,12 @@
 	address = {Brasília, Brazil},
 	title = {Planejamento probabilístico de rotas no espaço de configuração e sua aplicação em robótica móvel},
 	html = {http://www.realp.unb.br/jspui/handle/10482/3962?locale=en},
+	url = {http://www.realp.unb.br/jspui/handle/10482/3962?locale=en},
 	language = {Portuguese},
 	school = {Universidade de Brasília},
 	author = {Adorno, Bruno Vilhena},
 	year = {2008},
+	bibtex_show={true},
 }
 
 
@@ -16,9 +18,11 @@
 	type = {{PhD} {Dissertation}},
 	title = {Two-arm {Manipulation}: {From} {Manipulators} to {Enhanced} {Human}-{Robot} {Collaboration} [{Contribution} à la manipulation à deux bras : des manipulateurs à la collaboration homme-robot]},
 	html = {https://tel.archives-ouvertes.fr/tel-00641678/},
+	url = {https://tel.archives-ouvertes.fr/tel-00641678/},
 	language = {English},
 	school = {Université Montpellier 2},
 	author = {Adorno, Bruno Vilhena},
 	year = {2011},
 	keywords = {Two-arm manipulation, Dual quaternion, Kinematic control, Cooperative dual task-space, Intuitive human-robot collaboration, Mobile manipulator, Physical human-robot interaction, Whole-body motion},
+	bibtex_show={true},
 }
