Added preview image for 2023's journal paper.

--- a/_bibliography/journals.bib
+++ b/_bibliography/journals.bib
@@ -355,6 +355,7 @@
 	issn = {2576-3202},
 	shorttitle = {Design {Requirements} of {Robotic} {Systems} for {Assisting} {Percutaneous} {Tracheostomy}},
 	html = {https://ieeexplore.ieee.org/document/10234533/},
+	url = {https://ieeexplore.ieee.org/document/10234533/},
 	doi = {10.1109/TMRB.2023.3309946},
 	number = {4},
 	urldate = {2023-11-25},
@@ -364,5 +365,6 @@
 	year = {2023},
 	bibtex_show={true},
 	pages = {754--767},
+	preview = {Tang_et_al_2023_Design_Requirements_of_Robotic_Systems_for_Assisti.png}
 	
 }
