Added thumbnails for JFI2020 and RAL2019.

--- a/_bibliography/journals.bib
+++ b/_bibliography/journals.bib
@@ -209,6 +209,7 @@
 	Publisher: Federal University of Minas Gerais},
 	pages = {4048--4053},
 	bibtex_show={true},
+	preview={ral2019.png}
 }
 
 @article{Savino2020,
@@ -227,6 +228,7 @@
 	Publisher: Elsevier Ltd},
 	pages = {142--178},
 	bibtex_show={true},
+	preview={jfi-2020.gif}
 }
 
 @article{Fonseca2021b,
