Added thumbnails for jint2018 and rcim2018.

--- a/_bibliography/journals.bib
+++ b/_bibliography/journals.bib
@@ -142,6 +142,7 @@
 	keywords = {Dual quaternion, Pose control, Robot manipulator},
 	pages = {100--110},
 	bibtex_show={true},
+	preview={rcim2018.png}
 }
 
 @article{Goncalves2020,
@@ -172,6 +173,7 @@
 	year = {2018},
 	pages = {263--278},
 	bibtex_show={true},
+	preview={jint2028-LP.png}
 }
 
 @article{Marinho2019,
