Added thumbnails for JCAE2022 and TRO2019.

--- a/_bibliography/journals.bib
+++ b/_bibliography/journals.bib
@@ -193,6 +193,7 @@
 	Publisher: IEEE},
 	pages = {1166--1185},
 	bibtex_show={true},
+	preview = {tro2019.png}
 }
 
 @article{Quiroz-Omana2019,
@@ -336,6 +337,7 @@
 	keywords = {task planning, Task planning, constrained control, Constrained control, task relaxation, Task relaxation},
 	pages = {1103--1115},
 	bibtex_show={true},
+	preview = {jcae2022.png}
 }
 
 @article{Marinho2022,
