Add thumbnails for JFI2017, RBE2015, and TRO2022.

--- a/_bibliography/journals.bib
+++ b/_bibliography/journals.bib
@@ -13,6 +13,7 @@
 	year = {2014},
 	pages = {216--227},
 	bibtex_show={true},
+	preview = {jcae2014.png},
 }
 
 @article{Bernardes2013,
@@ -31,6 +32,7 @@
 	keywords = {Robotics, Needle, Steering},
 	pages = {630--645},
 	bibtex_show={true},
+	preview = {mechatronics2013.png},
 }
 
 @article{Adorno2015,
@@ -48,6 +50,7 @@
 	year = {2015},
 	pages = {314--331},
 	bibtex_show={true},
+	preview = {robotica2015.png}
 }
 
 @article{Goncalves2016,
@@ -64,6 +67,7 @@
 	year = {2016},
 	pages = {65--72},
 	bibtex_show={true},
+	preview = {ral2016.png},
 }
 
 @article{Lana2015a,
@@ -80,6 +84,7 @@
 	keywords = {brain-machine interface, desynchronization, event-related, movement intention, objective response detection, statistical f test},
 	pages = {285--294},
 	bibtex_show={true},
+	preview = {rbe2015},
 }
 
 @article{Adorno2016,
@@ -96,6 +101,7 @@
 	keywords = {kinematics, unit dual quaternion, cross-motion invariance, rigid motion},
 	pages = {1359--1378},
 	bibtex_show={true},
+	preview = {jmci2017.png},
 }
 
 @article{Kussaba2017,
@@ -111,6 +117,7 @@
 	year = {2017},
 	pages = {2769--2787},
 	bibtex_show={true},
+	preview = {jfi2017.png}
 }
 
 @article{Silva2017,
@@ -158,6 +165,7 @@
 	year = {2020},
 	pages = {644--656},
 	bibtex_show={true},
+	preview = {tro2020.png}
 }
 
 @article{Quiroz-Omana2017,
@@ -173,7 +181,7 @@
 	year = {2018},
 	pages = {263--278},
 	bibtex_show={true},
-	preview={jint2028-LP.png}
+	preview={jint2018-LP.png}
 }
 
 @article{Marinho2019,
@@ -251,6 +259,7 @@
 	keywords = {adaptive control, robot manipulator, Dual quaternion, Adaptive control, Robot manipulator, Ill-conditioning, ill-conditioning, Admittance control, admittance control, dynamic control, Dynamic control},
 	pages = {41},
 	bibtex_show={true},
+	preview = {jint2021.png},
 }
 
 @article{Figueredo2018,
@@ -268,6 +277,7 @@
 	Publisher: Elsevier Ltd},
 	pages = {109817},
 	bibtex_show={true},
+	preview = {automatica2021.png},
 }
 
 @article{Adorno2019,
@@ -287,6 +297,7 @@
 	keywords = {Quaternions, Manipulators, Robot kinematics, Algebra, Libraries, Matlab},
 	pages = {102--116},
 	bibtex_show={true},
+	preview = {ram2021.png},
 }
 
 @article{Fonseca2020a,
@@ -302,6 +313,7 @@
 	year = {2020},
 	pages = {6057--6064},
 	bibtex_show={true},
+	preview = {ral2020.png},
 }
 
 @article{Silva2020,
@@ -319,6 +331,7 @@
 	keywords = {dual quaternion algebra, constraint, euler-lagrange equations, gauss, gibbs-appell equations, kane, mobile manipulator dynamics, newton-euler model, s equations, s principle of least},
 	pages = {061005},
 	bibtex_show={true},
+	preview = {jmr2022.png},
 }
 
 @article{Pereira2022,
@@ -337,7 +350,7 @@
 	keywords = {task planning, Task planning, constrained control, Constrained control, task relaxation, Task relaxation},
 	pages = {1103--1115},
 	bibtex_show={true},
-	preview = {jcae2022.png}
+	preview = {jcae2022.png},
 }
 
 @article{Marinho2022,
@@ -354,6 +367,7 @@
 	pages = {3498--3513},
 	code = {https://github.com/mmmarinho/tro2022_adaptivecontrol},
 	bibtex_show={true},
+	preview = {tro2022.png},
 }
 
 @article{tang_design_2023,
