Fixed reference to the thumbnail of RBE2015.

--- a/_bibliography/journals.bib
+++ b/_bibliography/journals.bib
@@ -84,7 +84,7 @@
 	keywords = {brain-machine interface, desynchronization, event-related, movement intention, objective response detection, statistical f test},
 	pages = {285--294},
 	bibtex_show={true},
-	preview = {rbe2015},
+	preview = {rbe2015.png},
 }
 
 @article{Adorno2016,
