Added preview thumbnails for book chapters and preprints.

--- a/_bibliography/preprints.bib
+++ b/_bibliography/preprints.bib
@@ -3,25 +3,29 @@
 @techreport{Adorno2017,
 	title = {Robot {Kinematic} {Modeling} and {Control} {Based} on {Dual} {Quaternion} {Algebra} -- {Part} {I}: {Fundamentals}},
 	html = {https://hal.archives-ouvertes.fr/hal-01478225v1},
+	url = {https://hal.archives-ouvertes.fr/hal-01478225v1},
 	institution = {Federal University of Minas Gerais},
 	author = {Adorno, Bruno Vilhena},
 	year = {2017},
 	pages = {48},
 	bibtex_show={true},
+	preview = {DQ_book_draft.png}
 }
 
 @misc{Adorno2022,
 	title = {The {IncompleteGuide} to {Academic} {Writing} in {Robotics} {Research}},
 	html = {https://incompleteguides.github.io/},
+	url = {https://incompleteguides.github.io/},
 	author = {Adorno, Bruno Vilhena and Marinho, Murilo Marques},
 	year = {2022},
 	pages = {31},
 	bibtex_show={true},
+	preview = {under_construction.png}
 }
 
 @misc{Silva2022a,
 	title = {Dynamic {Modeling} of {Branched} {Robots} using {Modular} {Composition}},
-	html = {http://arxiv.org/abs/2208.01795},
+	url = {http://arxiv.org/abs/2208.01795},
 	abstract = {This paper
 	proposes a systematic modular procedure for the dynamic modeling of branched robots comprising several subsystems, each of which being composed of multiple rigid bodies. Furthermore, the proposed strategy is applicable even if some subsystems are regarded as black boxes, requiring only the twists and wrenches at the connection points between different subsystems. To help in the model composition, we also propose a graph representation that encodes the propagation of twists and wrenches between the subsystems. Numerical results show that the proposed formalism is as accurate as a state-of-the-art library for robotic dynamic modeling.},
 	author = {Silva, Frederico Fernandes Afonso and Adorno, Bruno Vilhena},
@@ -29,4 +33,5 @@
 	year = {2023},
 	arxiv = {2208.01795},
 	bibtex_show={true},
+	preview = {tro2014.png}
 }
