--- a/_bibliography/national_conferences.bib
+++ b/_bibliography/national_conferences.bib
@@ -37,6 +37,7 @@
 	keywords = {cooperative systems, dual quaternion, resumo, cooperative dual task-space, este artigo prop, kinematic control, ma-, multiarm manipulation, nipulator robots},
 	pages = {1436--1443},
 	bibtex_show={true},
+	preview={Adorno2012.jpeg}
 }
 
 @inproceedings{Lana2013c,
