--- a/_bibliography/international_conferences.bib
+++ b/_bibliography/international_conferences.bib
@@ -9,6 +9,7 @@
 	pages = {988--993},
 	html = {https://doi.org/10.1109/IROS.2009.5354533},
 	bibtex_show={true},
+	preview={AdornoBorges2009.jpg},
 }
 
 @inproceedings{Adorno2011a,
@@ -26,6 +27,7 @@
 	note = {ISSN: 10504729},
 	pages = {3777--3783},
 	bibtex_show={true},
+	preview={AdornoBóFraissePoignet2011.jpg}
 }
 
 @inproceedings{Bernardes2011b,
@@ -54,6 +56,7 @@
 	year = {2011},
 	pages = {4658--4663},
 	bibtex_show={true},
+	preview={AdornoBoFraisse2011.jpg},
 }
 
 @inproceedings{Bernardes2012,
