--- a/_bibliography/national_conferences.bib
+++ b/_bibliography/national_conferences.bib
@@ -217,6 +217,7 @@
 	year = {2018},
 	pages = {1--8},
 	bibtex_show={true},
+	preview = {FonsecaAssisAdornoFraisse2018.jpg},
 }
 
 @inproceedings{Brito2018,
