--- a/_bibliography/national_conferences.bib
+++ b/_bibliography/national_conferences.bib
@@ -108,6 +108,7 @@
 	keywords = {humanoid robots, dual quaternion, center of mass, com, com control, cooperative dual},
 	pages = {485 -- 490},
 	bibtex_show={true},
+	preview = {OliveiraAdorno2015.jpg},
 }
 
 @inproceedings{Brito2015b,
