--- a/_bibliography/national_conferences.bib
+++ b/_bibliography/national_conferences.bib
@@ -5,7 +5,7 @@
 	year = {2005},
 	pages = {1--8},
 	bibtex_show={true},
-	preview = {AdornoAguiarBorges2005.jpg},
+	preview={AdornoAguiarBorges2005.jpg},
 }
 
 @inproceedings{article:AdornoBorges:2007,
@@ -50,6 +50,7 @@
 	keywords = {human-robot interaction, assistance task, dual quaternion algebra, jacobian-based control, task-priority control},
 	pages = {1--6},
 	bibtex_show={true},
+	preview={LanaAdornoTierra-Criollo2013.jpg},
 }
 
 
@@ -62,6 +63,7 @@
 	keywords = {robotic manipulator, dual quaternions, kinematic control, openrave, ros},
 	pages = {1--6},
 	bibtex_show={true},
+	preview={MarinhoAdorno2013.jpg},
 }
 
 @inproceedings{Salazar-Sangucho2014,
@@ -73,6 +75,7 @@
 	year = {2014},
 	pages = {1544--1551},
 	bibtex_show={true},
+	preview={Salazar-SanguchoAdorno2014.jpg},
 }
 
 
@@ -85,6 +88,7 @@
 	keywords = {dual quaternions, manipulation tasks, tff, twists, wrenches},
 	pages = {965--972},
 	bibtex_show={true},
+	preview={LanaAdornoMaia2014.jpg},
 }
 
 @inproceedings{Duraes2014,
@@ -96,6 +100,7 @@
 	keywords = {discrete event systems, optimal directed control, sequencing, supervisory control theory},
 	pages = {1608--1615},
 	bibtex_show={true},
+	preview={DurãesVieiraPenaAdorno2014.jpg},
 }
 
 @inproceedings{Oliveira2015a,
@@ -108,7 +113,7 @@
 	keywords = {humanoid robots, dual quaternion, center of mass, com, com control, cooperative dual},
 	pages = {485 -- 490},
 	bibtex_show={true},
-	preview = {OliveiraAdorno2015.jpg},
+	preview={OliveiraAdorno2015.jpg},
 }
 
 @inproceedings{Brito2015b,
@@ -119,7 +124,7 @@
 	year = {2015},
 	pages = {1907 -- 1912},
 	bibtex_show={true},
-	preview = {BritoSavino AdornoPimenta2015.jpg},
+	preview={BritoSavino AdornoPimenta2015.jpg},
 }
 
 
@@ -131,6 +136,7 @@
 	year = {2015},
 	pages = {969--974},
 	bibtex_show={true},
+	preview={MelloAdornoRaffo2015.jpg},
 }
 
 @inproceedings{Quiroz-Omana2016,
@@ -219,7 +225,7 @@
 	year = {2018},
 	pages = {1--8},
 	bibtex_show={true},
-	preview = {FonsecaAssisAdornoFraisse2018.jpg},
+	preview={FonsecaAssisAdornoFraisse2018.jpg},
 }
 
 @inproceedings{Brito2018,
@@ -231,7 +237,7 @@
 	year = {2018},
 	pages = {1--8},
 	bibtex_show={true},
-	preview = {BritoPalmaAdornoPimenta2018.jpg},
+	preview={BritoPalmaAdornoPimenta2018.jpg},
 }
 
 
@@ -273,5 +279,5 @@
 	year = {2020},
 	pages = {1--8},
 	bibtex_show={true},
-	preview = {PereiraMarcosAdorno.jpg},
+	preview={PereiraMarcosAdorno.jpg},
 }
