--- a/_bibliography/national_conferences.bib
+++ b/_bibliography/national_conferences.bib
@@ -16,6 +16,7 @@
 	year = {2007},
 	pages = {1--6},
 	bibtex_show={true},
+	preview = {AdornoBorges2007.jpg},
 }
 
 @inproceedings{article:Adorno:2006,
@@ -25,6 +26,7 @@
 	year = {2006},
 	pages = {1--6},
 	bibtex_show={true},
+	preview = {AdornoBorges2006.jpg},
 }
 
 
