--- a/_bibliography/international_conferences.bib
+++ b/_bibliography/international_conferences.bib
@@ -27,7 +27,7 @@
 	note = {ISSN: 10504729},
 	pages = {3777--3783},
 	bibtex_show={true},
-	preview={AdornoBóFraissePoignet2011.jpg}
+	preview={AdornoBoFraissePoignet2011.jpg}
 }
 
 @inproceedings{Bernardes2011b,
