--- a/_bibliography/national_conferences.bib
+++ b/_bibliography/national_conferences.bib
@@ -102,7 +102,7 @@
 	keywords = {discrete event systems, optimal directed control, sequencing, supervisory control theory},
 	pages = {1608--1615},
 	bibtex_show={true},
-	preview={DurãesVieiraPenaAdorno2014.jpg},
+	preview={DuraesVieiraPenaAdorno2014.jpg},
 }
 
 @inproceedings{Oliveira2015a,
@@ -281,5 +281,5 @@
 	year = {2020},
 	pages = {1--8},
 	bibtex_show={true},
-	preview={PereiraMarcosAdorno.jpg},
+	preview={PereiraMarcosAdorno2020.jpg},
 }
